crates/aranya-policy-compiler/tests/data/type_errors/publish_non_command_int_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     publish 3
  |             ^ expected `struct T` but found `int`
